--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,10 @@
 # Site settings
 title: 行之博客 
-email: 486614191@qq.com
-description: Linux  /  C  /  golang  /  Emacs                
+email: 48614191@qq.com
+description: Linux / C / golang / Emacs                
 baseurl:  # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: xep007
-#
+url: "http://xep007.github.io"
+twitter_username: 
 github_username:  xep007
 
 # Build settings
