--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ url: "http://xep007.github.io"
 twitter_username: 
 github_username:  xep007
 
+production_url: http://xep007.github.io
 # Build settings
 markdown: kramdown
 
